<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioSesionActivity"
    android:background="@drawable/background_gradient"
>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
    />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
    />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="15dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
        />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/password"
            android:inputType="textPassword"
        />
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
        />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
    />
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:text="@string/login"
        android:textColor="@color/color_text_primary"
    />
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_border"
        android:text="@string/register"
        android:textColor="@color/color_text_primary"
    />
</LinearLayout>
