<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="gomez.abraham.organizadoreventos.TabsFragment"
        tools:layout="@layout/fragment_tabs"
        >
        <action
            android:id="@+id/action_nav_menu_to_nav_eventos"
            app:destination="@id/nav_eventos" />
        <action
            android:id="@+id/action_nav_menu_to_nav_presupuesto"
            app:destination="@id/nav_presupuesto" />
        <action
            android:id="@+id/action_nav_menu_to_nav_tarea"
            app:destination="@id/nav_tarea" />
    </fragment>

    <fragment
        android:id="@+id/nav_eventos"
        android:name="gomez.abraham.organizadoreventos.ui.eventos.EventosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_eventos" />

    <fragment
        android:id="@+id/nav_tarea"
        android:name="gomez.abraham.organizadoreventos.ui.tareas.TareasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_tareas" />

    <fragment
        android:id="@+id/nav_presupuesto"
        android:name="gomez.abraham.organizadoreventos.ui.slideshow.PresupuestoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_presupuesto" />
</navigation>