<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".RegistroActivity"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <!-- Register form with a button and a link to the login activity -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:layout_marginEnd="15dp"
            />
            <CheckBox
                    android:id="@+id/remember_me_register"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/checkbox_selectable"
                    android:button="@null"
                    android:buttonTint="@color/black"
                    android:layout_gravity="center"
            />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            />
        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textColor="@color/color_text_primary"
            android:background="@drawable/rounded_border"
            />
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@color/color_text_primary"
            android:background="@drawable/rounded_border"
            />

    </LinearLayout>


</ScrollView>