<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background_gradient"
        tools:context=".RecuperarClaveActivity"
>


    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="100dp"
            android:background="@color/white"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textAlignment="center"
    />
    <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/new_password"
            android:inputType="textPassword"
    />
    <EditText
            android:id="@+id/repeat_new_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_border"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
    />
    <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <Button
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/rounded_border"
            android:text="@string/reset_password"
            android:textColor="@color/color_text_primary"
    />

</LinearLayout>